--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-remark": "^2.8.44",
     "gatsby-transformer-sharp": "^2.5.17",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
