--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
+    "bodymovin": "^4.13.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
@@ -23,6 +24,7 @@
     "gatsby-transformer-remark": "^2.8.44",
     "gatsby-transformer-sharp": "^2.5.17",
     "lodash": "^4.17.20",
+    "lottie-web": "^5.7.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
