--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-preload-fonts": "^1.2.28",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.5.1",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-styled-components": "^3.3.14",
@@ -24,6 +25,7 @@
     "gatsby-transformer-sharp": "^2.5.17",
     "lodash": "^4.17.20",
     "lottie-web": "^5.7.4",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
