--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "prettier": "2.1.2"
   },
   "keywords": [
