--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "babel-plugin-styled-components": "^1.11.1",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
@@ -12,6 +14,7 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-preload-fonts": "^1.2.28",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -40,6 +43,10 @@
   "keywords": [
     "gatsby"
   ],
+  "prettier": {
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  },
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
