--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/styled-components": "^5.1.4",
     "prettier": "2.1.2"
   },
   "keywords": [
