finish text + add mandelbrot set

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-remark": "^2.8.44",
     "gatsby-transformer-sharp": "^2.5.17",
+    "glslCanvas": "^0.1.7",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-merge-refs": "^1.1.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.0"
   },
